// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterProvider should render router provider correctly 1`] = `
<div>
  <div
    class="css-c6xn9e"
  >
    <div
      class="css-9xynfp"
    />
    <div
      class="css-wzg920"
    />
    <div
      class="css-s5xaig"
    />
    <div
      class="css-hyln0r"
    />
    <div
      class="css-ocuih8"
    >
      <div
        class="css-1x4i8xv"
      />
      <div
        class="css-tw4vmx"
      >
        <svg
          class="telegramonic-icon "
          height="80"
          viewBox="0 0 85 85"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="blueGrad"
              x1="0%"
              x2="0%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#0088cc"
              />
              <stop
                offset="100%"
                stop-color="#007bb9"
              />
            </lineargradient>
            <lineargradient
              id="blueGradDark"
              x1="0%"
              x2="0%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#007bb9"
              />
              <stop
                offset="100%"
                stop-color="#006193"
              />
            </lineargradient>
          </defs>
          <g
            transform="translate(-1, -9) scale(1.2)"
          >
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="60"
            />
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="38"
            />
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="16"
            />
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="56"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="66"
            />
            <circle
              cx="52"
              cy="65"
              fill="#00ffcc"
              r="2"
            />
             
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="64"
            />
             
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="34"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="44"
            />
            <circle
              cx="52"
              cy="43"
              fill="#00ffcc"
              r="2"
            />
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="42"
            />
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="12"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="22"
            />
            <circle
              cx="52"
              cy="21"
              fill="#00ffcc"
              r="2"
            />
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="20"
            />
          </g>
          <g
            transform="translate(29.1, 16.5) scale(1.68)"
          >
            <path
              d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
              fill="#0088cc"
            />
            <path
              d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
              fill="#ffffff"
            />
          </g>
        </svg>
      </div>
    </div>
    <p
      class="css-19z886v"
    >
      Telegramonic
    </p>
    <p
      class="css-bmioxu"
    >
      CLOUD STORAGE CLIENT
    </p>
    <div
      class="css-167mtov"
    >
      <div
        class="css-1fylyis"
      />
    </div>
    <div
      class="css-1ttgzt0"
    >
      <p
        class="css-v7jnhe"
      >
        &gt; 
        INITIALIZING SECURE SESSION...
      </p>
      <p
        class="css-1bq43kb"
      />
    </div>
  </div>
</div>
`;

exports[`RouterProvider should render router provider correctly 2`] = `
<div>
  <div
    class="css-1svsvwq"
  >
    <div
      class="chakra-stack css-uoulu9"
    >
      <div
        class="chakra-stack css-1rj1i46"
      >
        <a
          data-discover="true"
          href="/"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <div
            class="css-1hxhaxl"
          >
            <svg
              class="telegramonic-icon "
              height="120"
              viewBox="0 0 85 85"
              width="120"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  id="blueGrad"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="0%"
                    stop-color="#0088cc"
                  />
                  <stop
                    offset="100%"
                    stop-color="#007bb9"
                  />
                </lineargradient>
                <lineargradient
                  id="blueGradDark"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="0%"
                    stop-color="#007bb9"
                  />
                  <stop
                    offset="100%"
                    stop-color="#006193"
                  />
                </lineargradient>
              </defs>
              <g
                transform="translate(-1, -9) scale(1.2)"
              >
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="60"
                />
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="38"
                />
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="16"
                />
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="56"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="66"
                />
                <circle
                  cx="52"
                  cy="65"
                  fill="#00ffcc"
                  r="2"
                />
                 
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="64"
                />
                 
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="34"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="44"
                />
                <circle
                  cx="52"
                  cy="43"
                  fill="#00ffcc"
                  r="2"
                />
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="42"
                />
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="12"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="22"
                />
                <circle
                  cx="52"
                  cy="21"
                  fill="#00ffcc"
                  r="2"
                />
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="20"
                />
              </g>
              <g
                transform="translate(29.1, 16.5) scale(1.68)"
              >
                <path
                  d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
                  fill="#0088cc"
                />
                <path
                  d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
                  fill="#ffffff"
                />
              </g>
            </svg>
          </div>
          <div
            class="css-k008qs"
          >
            <h2
              class="chakra-heading css-1skm9mz"
            >
              Telegramonic
            </h2>
          </div>
        </a>
      </div>
      <div
        class="chakra-stack css-1kydda"
      >
        <div
          class="chakra-stack css-j91dj4"
        >
          <a
            aria-label="/docs-nav-link"
            class="chakra-button css-1ubh9xi"
            data-discover="true"
            href="/docs"
            style="display: flex; align-items: center;"
            type="button"
          >
            <p
              class="css-nh0ii3"
            >
              Docs
            </p>
          </a>
          <a
            aria-label="/product-nav-link"
            class="chakra-button css-1ubh9xi"
            data-discover="true"
            href="/product"
            style="display: flex; align-items: center;"
            type="button"
          >
            <p
              class="css-nh0ii3"
            >
              Product
            </p>
          </a>
        </div>
        <a
          aria-label="GitHub Repository"
          class="chakra-button css-1edt3mx"
          href="https://github.com/telegramonic/telegramonic"
          rel="noopener noreferrer"
          style="display: flex; align-items: center; justify-content: center;"
          target="_blank"
          type="button"
        >
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
            />
          </svg>
        </a>
        <div
          class="css-19r7uti"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__trigger css-ymbu1e"
            data-controls="menu::r0::content"
            data-part="trigger"
            data-scope="menu"
            data-state="closed"
            data-uid=":r0:"
            dir="ltr"
            id="menu::r0::trigger"
            type="button"
          >
            Menu
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 6a1 1 0 011-1h18a1 1 0 110 2H3a1 1 0 01-1-1zM2 12.032a1 1 0 011-1h18a1 1 0 110 2H3a1 1 0 01-1-1zM3 17.064a1 1 0 100 2h18a1 1 0 000-2H3z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-k0sogd"
    >
      <div
        class="css-c6xn9e"
      >
        <div
          class="css-9xynfp"
        />
        <div
          class="css-wzg920"
        />
        <div
          class="css-s5xaig"
        />
        <div
          class="css-hyln0r"
        />
        <div
          class="css-ocuih8"
        >
          <div
            class="css-1x4i8xv"
          />
          <div
            class="css-tw4vmx"
          >
            <svg
              class="telegramonic-icon "
              height="80"
              viewBox="0 0 85 85"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  id="blueGrad"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="0%"
                    stop-color="#0088cc"
                  />
                  <stop
                    offset="100%"
                    stop-color="#007bb9"
                  />
                </lineargradient>
                <lineargradient
                  id="blueGradDark"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="0%"
                    stop-color="#007bb9"
                  />
                  <stop
                    offset="100%"
                    stop-color="#006193"
                  />
                </lineargradient>
              </defs>
              <g
                transform="translate(-1, -9) scale(1.2)"
              >
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="60"
                />
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="38"
                />
                <rect
                  fill="rgba(0,0,0,0.15)"
                  height="18"
                  rx="4"
                  width="56"
                  x="7"
                  y="16"
                />
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="56"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="66"
                />
                <circle
                  cx="52"
                  cy="65"
                  fill="#00ffcc"
                  r="2"
                />
                 
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="64"
                />
                 
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="34"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="44"
                />
                <circle
                  cx="52"
                  cy="43"
                  fill="#00ffcc"
                  r="2"
                />
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="42"
                />
                <rect
                  fill="url(#blueGrad)"
                  height="18"
                  rx="4"
                  width="56"
                  x="5"
                  y="12"
                />
                <rect
                  fill="url(#blueGradDark)"
                  height="8"
                  rx="4"
                  width="56"
                  x="5"
                  y="22"
                />
                <circle
                  cx="52"
                  cy="21"
                  fill="#00ffcc"
                  r="2"
                />
                <rect
                  fill="#006193"
                  height="2"
                  rx="1"
                  width="30"
                  x="12"
                  y="20"
                />
              </g>
              <g
                transform="translate(29.1, 16.5) scale(1.68)"
              >
                <path
                  d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
                  fill="#0088cc"
                />
                <path
                  d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
                  fill="#ffffff"
                />
              </g>
            </svg>
          </div>
        </div>
        <p
          class="css-19z886v"
        >
          Telegramonic
        </p>
        <p
          class="css-bmioxu"
        >
          CLOUD STORAGE CLIENT
        </p>
        <div
          class="css-167mtov"
        >
          <div
            class="css-1fylyis"
          />
        </div>
        <div
          class="css-1ttgzt0"
        >
          <p
            class="css-v7jnhe"
          >
            &gt; 
            INITIALIZING SECURE SESSION...
          </p>
          <p
            class="css-1bq43kb"
          />
        </div>
      </div>
    </div>
    <footer
      class="css-zi9c18"
    >
      <div
        class="chakra-stack css-ot7eu5"
      >
        <div
          class="chakra-stack css-1ln92h3"
        >
          <div
            class="chakra-stack css-1tlqcjd"
          >
            <div
              class="chakra-stack css-1x0y7ph"
            >
              <div
                class="css-1d5wfwy"
              >
                <svg
                  class="telegramonic-icon "
                  height="100%"
                  viewBox="0 0 85 85"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <defs>
                    <lineargradient
                      id="blueGrad"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#0088cc"
                      />
                      <stop
                        offset="100%"
                        stop-color="#007bb9"
                      />
                    </lineargradient>
                    <lineargradient
                      id="blueGradDark"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#007bb9"
                      />
                      <stop
                        offset="100%"
                        stop-color="#006193"
                      />
                    </lineargradient>
                  </defs>
                  <g
                    transform="translate(-1, -9) scale(1.2)"
                  >
                    <rect
                      fill="rgba(0,0,0,0.15)"
                      height="18"
                      rx="4"
                      width="56"
                      x="7"
                      y="60"
                    />
                    <rect
                      fill="rgba(0,0,0,0.15)"
                      height="18"
                      rx="4"
                      width="56"
                      x="7"
                      y="38"
                    />
                    <rect
                      fill="rgba(0,0,0,0.15)"
                      height="18"
                      rx="4"
                      width="56"
                      x="7"
                      y="16"
                    />
                    <rect
                      fill="url(#blueGrad)"
                      height="18"
                      rx="4"
                      width="56"
                      x="5"
                      y="56"
                    />
                    <rect
                      fill="url(#blueGradDark)"
                      height="8"
                      rx="4"
                      width="56"
                      x="5"
                      y="66"
                    />
                    <circle
                      cx="52"
                      cy="65"
                      fill="#00ffcc"
                      r="2"
                    />
                     
                    <rect
                      fill="#006193"
                      height="2"
                      rx="1"
                      width="30"
                      x="12"
                      y="64"
                    />
                     
                    <rect
                      fill="url(#blueGrad)"
                      height="18"
                      rx="4"
                      width="56"
                      x="5"
                      y="34"
                    />
                    <rect
                      fill="url(#blueGradDark)"
                      height="8"
                      rx="4"
                      width="56"
                      x="5"
                      y="44"
                    />
                    <circle
                      cx="52"
                      cy="43"
                      fill="#00ffcc"
                      r="2"
                    />
                    <rect
                      fill="#006193"
                      height="2"
                      rx="1"
                      width="30"
                      x="12"
                      y="42"
                    />
                    <rect
                      fill="url(#blueGrad)"
                      height="18"
                      rx="4"
                      width="56"
                      x="5"
                      y="12"
                    />
                    <rect
                      fill="url(#blueGradDark)"
                      height="8"
                      rx="4"
                      width="56"
                      x="5"
                      y="22"
                    />
                    <circle
                      cx="52"
                      cy="21"
                      fill="#00ffcc"
                      r="2"
                    />
                    <rect
                      fill="#006193"
                      height="2"
                      rx="1"
                      width="30"
                      x="12"
                      y="20"
                    />
                  </g>
                  <g
                    transform="translate(29.1, 16.5) scale(1.68)"
                  >
                    <path
                      d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
                      fill="#0088cc"
                    />
                    <path
                      d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
                      fill="#ffffff"
                    />
                  </g>
                </svg>
              </div>
              <h2
                class="chakra-heading css-1lit7km"
              >
                Telegramonic
              </h2>
            </div>
            <p
              class="css-1pwkyqd"
            >
              Unlimited cloud storage, secure, fast, and completely powered by Telegram.
            </p>
          </div>
          <div
            class="chakra-stack css-15fc39x"
          >
            <div
              class="chakra-stack css-1vm7xph"
            >
              <p
                class="css-crrjsv"
              >
                Legal
              </p>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/privacy"
                type="button"
              >
                Privacy policy
              </a>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/terms"
                type="button"
              >
                Terms of service
              </a>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/disclaimer"
                type="button"
              >
                Disclaimer
              </a>
            </div>
            <div
              class="chakra-stack css-1vm7xph"
            >
              <p
                class="css-crrjsv"
              >
                Team
              </p>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/contact-us"
                type="button"
              >
                Contact us
              </a>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/about-us"
                type="button"
              >
                About us
              </a>
              <a
                class="chakra-button css-105eugh"
                data-discover="true"
                href="/faq"
                type="button"
              >
                FAQs
              </a>
            </div>
          </div>
        </div>
        <div
          class="css-1e94gn1"
        />
        <div
          class="chakra-stack css-gvjkdd"
        >
          <p
            class="css-qv3kxj"
          >
            © 2026 telegramonic.com | All rights reserved
          </p>
          <div
            style="display: inline-flex; align-items: center; gap: 6px; padding: 4px 10px 4px 8px; border-radius: 9999px; transition: border-color 0.2s; cursor: pointer;"
          >
            <span
              aria-hidden="true"
              style="line-height: 0; flex-shrink: 0;"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 24 24"
                width="14"
              >
                <path
                  d="M9.57 3.38a8 8 0 0010.4 10.4 1 1 0 011.31 1.3 10 10 0 11-13-13 1 1 0 011.3 1.3zM7.1 5.04a8 8 0 1011.2 11.23A10 10 0 017.08 5.04z"
                />
              </svg>
            </span>
            <select
              aria-label="Select colour theme"
              id="theme-selector"
              style="appearance: none; background: transparent; outline: none; font-size: 11px; font-weight: 600; font-family: inherit; cursor: pointer; padding-right: 14px; line-height: 1.5;"
            >
              <option
                value="system"
              >
                System
              </option>
              <option
                value="light"
              >
                Light
              </option>
              <option
                value="dark"
              >
                Dark
              </option>
            </select>
            <svg
              aria-hidden="true"
              fill="none"
              height="9"
              stroke="currentColor"
              stroke-width="1.5"
              style="pointer-events: none; flex-shrink: 0; margin-left: -10px;"
              viewBox="0 0 10 6"
              width="9"
            >
              <path
                d="M1 1l4 4 4-4"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
